infrastructure/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: todoapp
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
      paths:
        - pathType: ImplementationSpecific
          path: /(.*)
          backend:
            service:
              name: todoapp-service
              port:
                number: 80

---

apiVersion: v1
kind: Service
metadata:
  name: todoapp-service
  namespace: todoapp
spec:
  selector:
    app: todoapp
  ports:
    - port: 80
      targetPort: 8080
